RESOLVED FIXED220571
QuickLook snapshots are missing some image content
https://bugs.webkit.org/show_bug.cgi?id=220571
Summary QuickLook snapshots are missing some image content
Tim Horton
Reported 2021-01-12 16:26:14 PST
QuickLook snapshots are missing some image content
Attachments
Patch (2.78 KB, patch)
2021-01-12 16:26 PST, Tim Horton
no flags
Tim Horton
Comment 1 2021-01-12 16:26:59 PST
Tim Horton
Comment 2 2021-01-12 16:27:01 PST
EWS
Comment 3 2021-01-12 21:48:28 PST
Committed r271430: <https://trac.webkit.org/changeset/271430> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417495 [details].
Note You need to log in before you can comment on or make changes to this bug.